--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@react-navigation/stack": "^6.3.17",
     "@realm/react": "^0.6.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "formik": "^2.4.5",
     "@types/react-native-vector-icons": "^6.4.15",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-native": "0.72.4",
@@ -39,6 +39,7 @@
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.4.0",
     "react-native-swiper": "^1.6.0",
